--- a/app/views/admin/kubik/navigation_items/_advanced_settings_template.html.erb
+++ b/app/views/admin/kubik/navigation_items/_advanced_settings_template.html.erb
@@ -1,5 +1,5 @@
 <template data-navigation-selector-target='advancedSettingsTemplate'>
-  <%= f.inputs "Item advanced settings", data: { 'navigation-selector-target': 'itemAdvancedWrapper' } do %>
+  <%= f.inputs "Item advanced settings", data: {  } do %>
     <%= f.input :open_in_new_window %>
     <%= f.input :custom_class %>
     <%= f.input :custom_id, label: 'Custom ID' %>
