--- a/app/views/admin/kubik/navigation_items/edit.html.erb
+++ b/app/views/admin/kubik/navigation_items/edit.html.erb
@@ -1,12 +1,16 @@
-<div data-controller='navigation-selector'
-     data-navigation-selector-listing-option-value='<%= Kubik::NavigationItem::LISTING_FORM_VALUE %>'
-     data-navigation-selector-listing-option-label-value='<%= I18n.t(:kubik_listing_form_option_label) %>'
+<div data-controller='navigation-selector resource-setup'
+     data-action="resource-setup:titleChange->item-setup#updateTitle"
+     data-item-setup-title-value='<%= @resource.title %>'
+     data-item-setup-new-record-value='<%= @resource.new_record? %>'
+     data-resource-setup-resource-type-value='<%= @resource.resource_type %>'
+     data-resource-setup-item-action-value='<%= @resource.action %>'
+     data-resource-setup-params-value='<%= @resource.params.to_json %>'
+     data-resource-setup-listing-option-value='<%= Kubik::NavigationItem::LISTING_FORM_VALUE %>'
+     data-resource-setup-listing-option-label-value='<%= I18n.t(:kubik_listing_form_option_label) %>'
+     data-resource-setup-show-listing-options-value=<%= ActiveModel::Type::Boolean.new.cast(@resource.params['nested_routes']) %>
+     data-resource-setup-source-url-value=''
+     data-resource-setup-scope-value='<%= @resource.params['kubik_scope'] %>'
      data-navigation-selector-item-type-value='<%= @resource.item_type %>'
-     data-navigation-selector-resource-type-value='<%= @resource.resource_type %>'
-     data-navigation-selector-item-action-value='<%= @resource.action %>'
-     data-navigation-selector-selected-resource-value='<%= @resource.params.to_json %>'
-     data-navigation-selector-resource-source-url-value='<%= get_resources_admin_kubik_navigation_items_url(format: :json) %>'
-     data-navigation-selector-new-record-value='<%= @resource.new_record? %>'
 >
 
 <%= semantic_form_for @resource, url: admin_kubik_navigation_item_path(@resource), html: { data: { turbo: false } } do |f| %>
