--- a/app/views/admin/kubik/navigation_items/_header_template.html.erb
+++ b/app/views/admin/kubik/navigation_items/_header_template.html.erb
@@ -1,16 +1,16 @@
 <template data-navigation-selector-target='headerTemplate'>
-  <%= f.inputs "Item look", data: { 'navigation-selector-target': 'itemLookWrapper' } do %>
+  <%= f.inputs "Item look", data: {  } do %>
     <%= f.input :title,
       input_html: {
         data: {
-          'navigation-selector-target': 'linkTitle'
+
         }
       }
     %>
     <%= f.input :text,
       input_html: {
         data: {
-          'navigation-selector-target': 'linkText'
+
         }
       }
     %>
