--- a/app/views/admin/kubik/navigation_items/_resource_template.html.erb
+++ b/app/views/admin/kubik/navigation_items/_resource_template.html.erb
@@ -1,16 +1,16 @@
 <template data-navigation-selector-target='resourceTemplate'>
-  <%= f.inputs "Item look", data: { 'navigation-selector-target': 'itemLookWrapper' } do %>
+  <%= f.inputs "Item look" do %>
     <%= f.input :title,
       input_html: {
         data: {
-          'navigation-selector-target': 'linkTitle'
+          'item-setup-target': 'title'
         }
       }
     %>
     <%= f.input :text,
       input_html: {
         data: {
-          'navigation-selector-target': 'linkText'
+          'item-setup-target': 'text'
         }
       }
     %>
@@ -18,12 +18,11 @@
     <%= f.input :slug,
       wrapper_html: {
         data: {
-          'navigation-selector-target': 'linkSlugWrapper'
         }
       },
       input_html: {
         data: {
-          'navigation-selector-target': 'linkSlug'
+          'item-setup-target': 'slug'
         }
       }
     %>
