--- a/app/views/admin/kubik/navigation_items/_link_template.html.erb
+++ b/app/views/admin/kubik/navigation_items/_link_template.html.erb
@@ -12,6 +12,9 @@
           }
         }
       %>
+      <% if Object.const_defined?('KubikMediaLibrary') %>
+        <%= f.input :navigation_image, as: 'kubik/single_media', label: 'Image' %>
+      <% end %>
       <%= f.input :description %>
       <%= f.input :link_location %>
   <% end %>
