--- a/app/views/admin/kubik/navigation_items/_node_template.html.erb
+++ b/app/views/admin/kubik/navigation_items/_node_template.html.erb
@@ -7,6 +7,9 @@
         }
       }
     %>
+    <% if Object.const_defined?('KubikMediaLibrary') %>
+      <%= f.input :navigation_image, as: 'kubik/single_media', label: 'Image' %>
+    <% end %>
     <%= f.input :slug,
       wrapper_html: {
         data: {
