--- a/.active_admin_sample/app/assets/stylesheets/active_admin.scss
+++ b/.active_admin_sample/app/assets/stylesheets/active_admin.scss
@@ -12,6 +12,7 @@
 //@import "active_admin/base";
 @import 'active_admin_kubik';
 @import 'kubik_navigation';
+@import 'kubik_media_gallery';
 
 // Overriding any non-variable Sass must be done after the fact.
 // For example, to change the default status-tag color:
